<resources>
    <string name="app_name">Driver Application</string>
    <string name="get_taxi_name">Get Taxi</string>
    <string name="Register">Sign In</string>
    <string name="Mail">E-Mail</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="ID">ID</string>
    <string name="Destination">Destination</string>
    <string name="Distance">Distance</string>
    <string name="Presentation">Presentation</string>
    <string name="Enter">Enter your Name</string>
    <string name="EnterPassword">Please enter a Password</string>
    <string name="Password">Password</string>
    <string name="Confirmation2">Confirm your password</string>
    <string name="Welcome"> Welcome  </string>
    <string name="littleTitle">Here are all the new Order :</string>
    <string name="Filtre">place where you want work</string>
    <string name="SMS">SMS</string>
    <string name="CP">Add Contact</string>
    <string name="Call">Call</string>
    <string name="EMail">eMail</string>
    <string name="Status">Status</string>
    <string name="Start">Start</string>
    <string name="Finish">Finish</string>
    <string name="Confirmation">Please enter your password again </string>
    <string name="Login">Login</string>
    <string name="Cancel">Cancel</string>
    <string name="Title_Notification">Get Taxi</string>
    <string name="Describle_Notification">A new order is available !</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="position_started">Position started</string>
</resources>
